# DRF_coursework

./: .coverage  .env.sample  .gitignore  manage.py  pyproject.toml
CourseWork_DRF/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
habits/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_remove_usefulhabit_bounded_habit_and_more.py  0003_alter_habit_time_alter_habit_user.py  0004_habit_telegramm_username.py  0005_rename_telegramm_username_habit_telegram_username.py  0006_remove_habit_telegram_username.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_telegram_username_customuser_tg_chat_id.py
